--- a/457b proj.ipynb
+++ b/457b proj.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
     "from sklearn.linear_model import LogisticRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -106,11 +107,11 @@
        "                                                Top6  \\\n",
        "0  Depleted Leicester prevail as Elliott spoils E...   \n",
        "\n",
-       "                               Top7                               Top8  \\\n",
-       "0  Hungry Spurs sense rich pickings  Gunners so wide of an easy target   \n",
+       "                               Top7                               Top8  ...  \\\n",
+       "0  Hungry Spurs sense rich pickings  Gunners so wide of an easy target  ...   \n",
        "\n",
-       "          ...                                             Top16  \\\n",
-       "0         ...          Flintoff injury piles on woe for England   \n",
+       "                                      Top16  \\\n",
+       "0  Flintoff injury piles on woe for England   \n",
        "\n",
        "                                               Top17  \\\n",
        "0  Hunters threaten Jospin with new battle of the...   \n",
@@ -133,7 +134,7 @@
        "[1 rows x 27 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,14 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3975, 27) (378, 27) (4101, 27)\n"
+      "(3723, 27) (378, 27) (4101, 27)\n"
      ]
     }
    ],
@@ -161,14 +162,14 @@
     "cutoff = '2015-01-01'\n",
     "train = data[data['Date'] < cutoff]\n",
     "test = data[data['Date'] >= cutoff]\n",
-    "train = data[data['Date'] < '20150101']\n",
-    "test = data[data['Date'] > '20141231']\n",
+    "train = data[data['Date'] < '2015-01-01']\n",
+    "test = data[data['Date'] > '2014-12-31']\n",
     "print(train.shape, test.shape, data.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -264,8 +265,8 @@
        "                                               8  \\\n",
        "0  derby raise a glass to strupar s debut double   \n",
        "\n",
-       "                                          9         ...          \\\n",
-       "0  southgate strikes  leeds pay the penalty         ...           \n",
+       "                                          9  ...  \\\n",
+       "0  southgate strikes  leeds pay the penalty  ...   \n",
        "\n",
        "                                         15  \\\n",
        "0  flintoff injury piles on woe for england   \n",
@@ -291,7 +292,7 @@
        "[1 rows x 25 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,27 +352,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8492063492063492\n"
+      "0.5634920634920635\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "print(nn(1e-5, (10,10), 3))"
+    "print(nn(1e-5, (10,10), 2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0001 (10, 10) 1 0.47619047619047616\n",
+      "0.0001 (10, 10) 2 0.5608465608465608\n",
+      "0.0001 (10, 10) 3 0.5158730158730159\n",
+      "0.0001 (10, 10) 4 0.5211640211640212\n"
+     ]
+    }
+   ],
    "source": [
     "# alphas = [1, 0.1, 0.01, 0.001, 0.0001]\n",
     "alphas = [0.0001]\n",
@@ -408,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
